# xsens_dot_example_android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: MovellaDotSdkCore.aar  XsensDotCore.aar  XsensDotMfm.aar  XsensDotOta.aar  XsensDotSdkCore2.aar
app/src/androidTest/java/com/xsens/dot/android/example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xsens.cpp
app/src/main/java/com/xsens/dot/android/example/: XsensDotApplication.java
app/src/main/java/com/xsens/dot/android/example/adapters/: DataAdapter.java  DataAdapter.kt  EasyMfmAdapter.kt  ExportAdapter.kt  RecordingAdapter.kt  RecordingFileSelectionAdapter.kt  ScanAdapter.java  ScanAdapter.kt  ScannerAdapter.java
app/src/main/java/com/xsens/dot/android/example/apps/: MovellaDotApplication.kt  XsensDotApplication.java  XsensDotApplication.kt
app/src/main/java/com/xsens/dot/android/example/interfaces/: BatteryChangedInterface.java  BatteryChangedInterface.kt  DataChangeInterface.java  DataChangeInterface.kt  FileSelectionCallback.kt  RecordingClickListener.kt  ScanClickInterface.java  ScanClickInterface.kt  SensorClickInterface.java  SensorClickInterface.kt  StreamingClickInterface.java  StreamingClickInterface.kt
app/src/main/java/com/xsens/dot/android/example/models/: MfmInfo.kt  MfmResult.kt  XsRecordingFileInfo.kt
app/src/main/java/com/xsens/dot/android/example/utils/: ProgressDialog.kt  Utils.java  Utils.kt  XsensDotNative.kt
app/src/main/java/com/xsens/dot/android/example/viewmodels/: BluetoothViewModel.java  BluetoothViewModel.kt  SensorViewModel.java  SensorViewModel.kt
app/src/main/java/com/xsens/dot/android/example/views/: ChartFragment.java  DataFragment.java  DataFragment.kt  EasyMfmFragment.kt  ExportFragment.kt  MainActivity.java  MainActivity.kt  OtaFragment.java  RecordingFileSelectionActivity.kt  RecordingFragment.kt  ScanFragment.java  ScanFragment.kt  ScannerFragment.java
app/src/main/res/layout/: activity_main.xml  activity_recording_file_selection.xml  dialog_export_progress.xml  dialog_syncing.xml  fragment_chart.xml  fragment_data.xml  fragment_easy_mfm.xml  fragment_export.xml  fragment_ota.xml  fragment_recording.xml  fragment_scan.xml  fragment_scanner.xml  item_data.xml  item_easy_mfm.xml  item_export.xml  item_recording.xml  item_recording_file_selection.xml  item_sensor.xml  list_item_scanner.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/xsens/dot/android/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
